--- a/ Coursera_Capstone.ipynb
+++ b/ Coursera_Capstone.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Coursera Capstone\n",
     "\n",
-    "Notebook for the"
+    "Notebook for the capstone project"
    ]
   },
   {
